--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-spring/web": "^9.7.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "express": "^4.19.2",
+    "exprss": "^0.0.1-security",
     "kakao": "^0.4.1",
     "kakao-js-sdk": "^1.2.3",
     "mongodb": "^6.5.0",
@@ -16,11 +20,15 @@
     "mysql2": "^3.9.4",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.9.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0",
+    "react-intersection-observer": "^9.10.2",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "sass": "^1.74.1",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
